# cuda-quantum

.github/workflows/config/: spelling_allowlist.txt
docs/sphinx/applications/python/: pasqal_mwis.ipynb
docs/sphinx/targets/cpp/: pasqal.cpp
docs/sphinx/targets/python/: pasqal.py
docs/sphinx/using/: applications.rst
docs/sphinx/using/backends/: cloud.rst  hardware.rst
docs/sphinx/using/backends/hardware/: neutralatom.rst
docs/sphinx/using/examples/: hardware_providers.rst
python/cudaq/operator/: evolution.py  expressions.py
python/extension/: CMakeLists.txt
python/tests/backends/: test_Pasqal.py
runtime/common/: AnalogDynamicsEmulation.cpp  AnalogDynamicsEmulation.h  AnalogHamiltonian.h  AnalogRemoteRESTQPU.h  Executor.cpp  Future.cpp  GPUInfo.h  RestClient.cpp  RestClient.h  SerializedCodeExecutionContext.h  ServerHelper.h
runtime/cudaq/platform/pasqal/: CMakeLists.txt  PasqalExecutor.cpp  PasqalExecutor.h  PasqalRemoteRESTQPU.cpp  PasqalRemoteRESTQPU.h  PasqalServerHelper.cpp  PasqalServerHelper.h  pasqal.yml
tpls/json/include/nlohmann/: json.hpp
unittests/backends/pasqal/: PasqalTester.cpp
